--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dieng Potato Rush</title>
+
+    <!-- p5.js -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- CSS -->
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: #fefae0; /* background lembut */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        overflow: hidden;
+      }
+
+      canvas {
+        border: 4px solid #bc6c25;
+        border-radius: 20px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      }
+    </style>
   </head>
+
   <body>
+    <!-- Script game -->
     <script src="script.js"></script>
   </body>
 </html>
