--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<style>
-  @media screen and (orientation: portrait) {
-    body::before {
-      content: "Putar HP ke landscape untuk main ya 🌄";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: #fff7d6;
-      color: #000;
-      font-size: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      text-align: center;
-      padding: 20px;
-    }
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dieng Potato Rush</title>
 
-    canvas {
-      display: none !important;
-    }
-  }
-</style>
+    <!-- p5.js -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+
+    <!-- CSS -->
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: #fefae0; /* background lembut */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        overflow: hidden;
+      }
+
+      canvas {
+        border: 4px solid #bc6c25;
+        border-radius: 20px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- Script game -->
+    <script src="script.js"></script>
+  </body>
+</html>
